<resources>
    <string name="app_name">REX-FIT</string>
    <string name="app_name_long">Counter</string>
    <string name="new_account">New Account</string>
    <string name="signup_desc">Start by entering your name and details below.</string>
    <string name="login_desc">Enter your login details to access your account</string>
    <string name="log_in">Log In</string>
    <string name="message">This App will send you an SMS message for verification and standard rates apply.. Kindly enter your phone Number</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="reset_pass_message">Seems like you forgot your password for MarksPlus. If this is true, click below to reset your password.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
   <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_main">Step Counter</string>
    <string name="action_training">Training</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="steps">Steps</string>
    <string name="calories">calories</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="activity_chart_summary_subtitle">Detailed summary of your activities</string>
    <string name="summary_card_kilocalories">kcal</string>
    <string name="summary_card_calories">cal</string>
    <string name="correct_steps">Correct steps</string>
    <string name="correct_steps_dialog_title">Correct steps</string>
    <string name="correct_steps_dialog_message">Please provide a new number of steps you walked.</string>
    <string name="hint_steps">Number of steps</string>
    <string name="pause_step_detection">Pause step detection</string>
    <string name="continue_step_detection">Continue step detection</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_intro">This app can count your steps in background, provides you an overview about your walked steps and allows you to define custom walking modes and notifications if the achievement of your daily step goal is in danger.</string>
    <string name="help_functionality_step_counter_summary">The step counter counts your daily steps in background and can be disabled in the settings.</string>
    <string name="help_functionality_notification_heading">Permanent Notification</string>
    <string name="help_functionality_notification">Notification</string>
    <string name="help_functionality_notification_summary">The permanent notification is necessary to keep the step counter alive in background. The content of the notification can be chosen in the settings.</string>
    <string name="help_functionality_notification_delete">You can disable all notifications in system preferences.</string>
    <string name="help_functionality_motivation_alert">Motivation alert</string>
    <string name="help_functionality_motivation_alert_summary">The app can show you motivation alerts if the achievement of your daily step goal is in danger. You can define the criterion, the time of day and the notification texts.</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_permission_boot_heading">Permission: Receive Boot Completed</string>
    <string name="help_permission_boot_description">is used to start the step counter and set the notifications at boot time. If the permission is not granted you have to start the app manually once after boot to activate the app.</string>
    <string name="help_permissions_selection">The permissions used by Privacy Friendly Pedometer can not be managed by the user in any Android version.</string>
    <string name="help_permission_wake_heading">Permission: Wake Lock</string>
    <string name="help_permission_wake_description">is used to keep the CPU awake to count the steps in background.</string>
    <string name="help_permission_gps_heading">Permission: Precise location</string>
    <string name="help_permission_gps_description">is used to show your current walking speed on home screen. If the permission is not granted the walking speed will not be showed - there are no other implications.</string>
    <string name="pref_group_title_personal_settings">Personalization</string>
    <string name="pref_step_counter_enabled" translatable="false">com.example.kiit.health.pref.step_counter_enabled</string>
    <string name="pref_title_step_counter_enabled">Permanent step counter</string>
    <string name="pref_summary_step_counter_enabled">The app counts your steps in background.</string>
    <string name="pref_use_wake_lock" translatable="false">com.example.kiit.health.pref.use_wake_lock</string>
    <string name="pref_title_use_wake_lock">Keep processor awake</string>
    <string name="pref_summary_use_wake_lock">On some devices the processor falls asleep and prevents counting steps. Enable this to keep the processor awake while counting steps - this may drain your battery!</string>
    <string name="pref_use_wake_lock_during_training" translatable="false">com.example.kiit.health.pref.use_wake_lock_during_training</string>
    <string name="pref_title_use_wake_lock_during_training">Wake lock during training</string>
    <string name="pref_summary_use_wake_lock_during_training">For better results during training mode keep processor awake. If app should keep the processor awake at any time this is automatically the case.</string>
    <string name="pref_show_velocity" translatable="false">com.example.kiit.health.pref.show_velocity</string>
    <string name="pref_title_show_velocity">Show current velocity</string>
    <string name="pref_summary_show_velocity">The app shows your current velocity in daily report. Access to your location is required to calculate the exact velocity.</string>
    <string name="pref_default_daily_step_goal" translatable="false">10000</string>
    <string name="pref_title_daily_step_goal">Personal daily step goal</string>
    <string name="pref_unit_of_length" translatable="false">com.example.kiit.health.pref.unit_of_length</string>
    <string name="pref_title_unit_of_length">Unit of length</string>
    <string name="unit_of_length_km">1|km|kilometers|km/h|1000|m</string>
    <string name="unit_of_length_mi">0.621371|mi|miles|mph|5280|ft</string>
    <string name="pref_unit_of_energy" translatable="false">com.example.kiit.health.pref.unit_of_energy</string>
    <string name="pref_title_unit_of_energy">Unit of energy</string>
    <string name="pref_explanation_weight_and_gender">To improve the calculation of the calories please set your weight and gender.</string>
    <string name="pref_summary_notification_permanent">The permanent notification is shown when the app counts your steps in background. You can customize what the app should show you.</string>
    <string name="pref_summary_accelerometer_threshold">The app uses the accelerometer of your device. To optimize the step detection adjust the sensitivity, please.</string>
    <string name="pref_weight" translatable="false">com.example.kiit.health.pref.weight</string>
    <string name="pref_title_weight">Weight (kg)</string>
    <string name="pref_default_weight" translatable="false">65.0</string>
    <string name="pref_gender" translatable="false">com.example.kiit.health.pref.gender</string>
    <string name="pref_title_gender">Gender</string>
    <string name="pref_accelerometer_threshold" translatable="false">com.example.kiit.health.pref.accelerometer_threshold</string>
    <string name="pref_title_accelerometer_threshold">Sensitivity</string>
    <string name="pref_accelerometer_steps_threshold" translatable="false">com.example.kiit.health.pref.accelerometer_step_threshold</string>
    <string name="pref_title_accelerometer_steps_threshold">Steps before counting starts</string>
    <string name="pref_default_accelerometer_steps_threshold" translatable="false">10</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_title_permanent_notification">Permanent Notification</string>
    <string name="pref_group_title_motivation_alert">Motivation Alert</string>
    <string name="pref_notification_permanent_show_steps" translatable="false">com.example.kiit.health.pref.permanent_notification_show_steps</string>
    <string name="pref_title_notification_permanent_show_steps">Show number of steps walked today</string>
    <string name="pref_notification_permanent_show_distance" translatable="false">com.example.kiit.health.pref.permanent_notification_show_distance</string>
    <string name="pref_title_notification_permanent_show_distance">Show distance walked today</string>
    <string name="pref_notification_permanent_show_calories" translatable="false">com.example.kiit.health.pref.permanent_notification_show_calories</string>
    <string name="pref_title_notification_permanent_show_calories">Show number of calories</string>
    <string name="pref_notification_motivation_alert_enabled" translatable="false">com.example.kiit.health.pref.motivation_alert_enabled</string>
    <string name="pref_title_notification_motivation_alert_enabled">Enable motivation alert</string>
    <string name="pref_notification_motivation_alert_time" translatable="false">com.example.kiit.health.pref.motivation_alert_time</string>
    <string name="pref_title_notification_motivation_alert_time">Motivation alert time</string>
    <string name="pref_notification_motivation_alert_texts" translatable="false">com.example.kiit.health.pref.motivation_alert_texts</string>
    <string name="pref_title_notification_motivation_alert_texts">Motivation notification texts</string>
    <string name="pref_notification_motivation_alert_criterion" translatable="false">com.example.kiit.health.pref.motivation_alert_criterion</string>
    <string name="pref_title_notification_motivation_alert_criterion">Motivation alert criterion</string>
    <string name="pref_header_walking_modes">Walking modes</string>
    <string name="pref_widget_data_set" translatable="false">com.example.kiit.health.pref.widget_data_set_</string>
    <string name="pref_distance_measurement_start_timestamp" translatable="false">com.example.kiit.health.pref.distance_measurement_start_timestamp</string>
    <string name="pref_hw_steps_on_last_save" translatable="false">com.example.kiit.health.pref.hw_steps_on_last_save</string>
    <string name="pref_daily_step_goal" translatable="false">com.example.kiit.health.pref.daily_step_goal</string>
    <string name="notification_text_steps">%1$s of %2$s steps walked today.</string>
    <string name="notification_text_distance">%1$.2f %2$s walked today.</string>
    <string name="notification_text_calories">Burned %.2f kcal today.</string>
    <string name="notification_text_default">Pedometer is active.</string>
    <string name="action_calories">Calories</string>
    <string name="action_distance">Distance</string>
    <string name="action_steps">Steps</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="action_start">Start</string>
    <string name="content_description_category_arms">Arms category image</string>
    <string name="content_description_category_cardio">Cardio category image</string>
    <string name="content_description_category_workout">Workout image</string>
    <string name="content_description_tag">Tabs for workout selection</string>
    <string name="pref_header_general">General</string>
</resources>