<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    android:background="@color/bg_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/backbtn"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="26dp"
            android:paddingRight="24dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titletxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="center"
                    android:text="@string/new_account"
                    android:textColor="#3c4b5d"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/desctxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/proximanovaregular"
                    android:gravity="center"
                    android:text="@string/signup_desc"
                    android:textColor="@color/darkgrey"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/userinfo_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <LinearLayout
                    android:id="@+id/namell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:padding="18dp">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/proximanovaregular"
                        android:hint="Name"
                        android:inputType="text"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emailll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:padding="18dp">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/proximanovaregular"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/passwordll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:padding="18dp">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/proximanovaregular"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textSize="14sp" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ageweightll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:padding="18dp">

                    <EditText
                        android:id="@+id/input_age"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/proximanovaregular"
                        android:hint="Age"
                        android:inputType="number"
                        android:textSize="14sp" />
                    <EditText
                        android:id="@+id/input_weight"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/proximanovaregular"
                        android:hint="Weight (in Kgs)"
                        android:inputType="number"
                        android:textSize="14sp" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/heightgenderll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:padding="18dp">

                    <EditText
                        android:id="@+id/input_height"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/proximanovaregular"
                        android:hint="Height (in Cms)"
                        android:inputType="number"
                        android:textSize="14sp" />
                    <Spinner android:id="@+id/spinner1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/exercisell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circularbordersolid"
                    android:gravity="center"
                    android:padding="18dp">
                    <Spinner android:id="@+id/spinner2"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout android:background="@drawable/circularbordersolid" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="15dp" android:layout_marginTop="20dp" android:id="@+id/phonenumberll" android:gravity="center_vertical">

                    <ImageView android:layout_height="25dp" android:layout_width="25dp" android:src="@drawable/indianflag"/>

                    <TextView
                        android:id="@+id/editTextCountryCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/circularbordersolid"
                        android:padding="4dp"
                        android:text="+91"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="14sp"

                        android:textStyle="bold" />

                    <EditText android:background="@drawable/circularbordersolid" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginLeft="10dp" android:id="@+id/input_phonenumber" android:textSize="14sp" android:inputType="phone" android:hint="PhoneNumber"/>

                </LinearLayout>



                <TextView
                    android:id="@+id/phonenumbertextll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="10dp"
                    android:fontFamily="@font/proximanovaregular"
                    android:text="@string/message"
                    android:textAlignment="center"
                    android:textSize="12sp" />


                <Button android:background="@drawable/circularbluebordersolid"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    android:layout_marginTop="24dp"
                    android:id="@+id/register_btn"
                    android:layout_marginBottom="14dp"
                    android:textColor="@color/white"
                    android:text="Continue"
                    android:fontFamily="@font/proximanovaregular"/>

            </LinearLayout>


            <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="10dp" android:id="@+id/link_login" android:orientation="vertical" android:layout_marginBottom="24dp" android:gravity="center">

                <TextView android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray"

                    android:layout_width="wrap_content" android:textSize="16dip" android:textColor="#3c4b5d" android:text="Already a member?" android:gravity="center" android:fontFamily="@font/proximanovaregular"/>

                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/tvlogin"
                    android:textSize="16dip" android:textColor="#8e9cfe" android:text=" Login" android:gravity="center" android:fontFamily="@font/proximanovaregular" android:clickable="true"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>